# MFSimVR

./: Cargo.toml
.github/workflows/: prepare-release.yml  rust.yml
mfsimvr/adb/: Cargo.toml
mfsimvr/adb/src/: commands.rs  lib.rs
mfsimvr/audio/: Cargo.toml
mfsimvr/audio/src/: lib.rs  linux.rs  windows.rs
mfsimvr/client_core/: Cargo.toml  cbindgen.toml
mfsimvr/client_core/src/: audio.rs  c_api.rs  connection.rs  lib.rs  logging_backend.rs  sockets.rs  statistics.rs  storage.rs
mfsimvr/client_core/src/video_decoder/: android.rs  mod.rs
mfsimvr/client_mock/: Cargo.toml
mfsimvr/client_mock/src/: main.rs
mfsimvr/client_openxr/: Cargo.toml
mfsimvr/client_openxr/src/: graphics.rs  interaction.rs  lib.rs  lobby.rs  passthrough.rs  stream.rs
mfsimvr/client_openxr/src/extra_extensions/: passthrough_fb.rs
mfsimvr/common/: Cargo.toml  README.md
mfsimvr/common/src/: connection_result.rs  version.rs
mfsimvr/dashboard/: Cargo.toml  README.md
mfsimvr/dashboard/src/: data_sources.rs  data_sources_wasm.rs  logging_backend.rs  main.rs
mfsimvr/dashboard/src/dashboard/: mod.rs
mfsimvr/dashboard/src/dashboard/components/: about.rs  devices.rs  installation.rs  logs.rs  notifications.rs  settings.rs  setup_wizard.rs  statistics.rs
mfsimvr/dashboard/src/dashboard/components/settings_controls/: array.rs  boolean.rs  choice.rs  collapsible.rs  dictionary.rs  mod.rs  notice.rs  number.rs  optional.rs  section.rs  switch.rs  text.rs  vector.rs
mfsimvr/dashboard/src/dashboard/components/settings_controls/presets/: builtin_schema.rs  higher_order_choice.rs  mod.rs
mfsimvr/dashboard/src/steamvr_launcher/: linux_steamvr.rs  mod.rs
mfsimvr/events/: Cargo.toml
mfsimvr/events/src/: lib.rs
mfsimvr/filesystem/: Cargo.toml
mfsimvr/filesystem/src/: lib.rs
mfsimvr/graphics/: Cargo.toml
mfsimvr/graphics/src/: lib.rs  lobby.rs  staging.rs  stream.rs
mfsimvr/gui_common/: Cargo.toml
mfsimvr/launcher/: Cargo.toml
mfsimvr/launcher/src/: actions.rs  main.rs  ui.rs
mfsimvr/packets/: Cargo.toml
mfsimvr/packets/src/: lib.rs
mfsimvr/server_core/: Cargo.toml  cbindgen.toml
mfsimvr/server_core/src/: bitrate.rs  c_api.rs  connection.rs  hand_gestures.rs  haptics.rs  input_mapping.rs  lib.rs  logging_backend.rs  sockets.rs  statistics.rs  web_server.rs
mfsimvr/server_core/src/tracking/: body.rs  face.rs  mod.rs  vmc.rs
mfsimvr/server_io/: Cargo.toml  README.md
mfsimvr/server_io/src/: firewall.rs  lib.rs  openvr_drivers.rs  openvrpaths.rs
mfsimvr/server_openvr/: Cargo.toml  build.rs
mfsimvr/server_openvr/src/: lib.rs  props.rs  tracking.rs
mfsimvr/session/: Cargo.toml  build.rs
mfsimvr/session/src/: lib.rs  settings.rs
mfsimvr/sockets/: Cargo.toml
mfsimvr/sockets/src/: control_socket.rs  lib.rs
mfsimvr/sockets/src/stream_socket/: mod.rs  tcp.rs  udp.rs
mfsimvr/system_info/: Cargo.toml
mfsimvr/system_info/src/: android.rs  lib.rs
mfsimvr/vrcompositor_wrapper/: Cargo.toml  drm-lease-shim.cpp
mfsimvr/vrcompositor_wrapper/src/: main.rs
mfsimvr/vulkan_layer/: Cargo.toml
mfsimvr/vulkan_layer/src/: lib.rs
mfsimvr/xtask/: Cargo.toml
mfsimvr/xtask/src/: build.rs  dependencies.rs  format.rs  main.rs  packaging.rs  version.rs
wiki/: Headset-and-ALVR-streamer-on-separate-networks.md  How-ALVR-works.md  Installation-guide.md  My-game-is-not-working-properly!-Help!.md  Troubleshooting.md
