[workspace]
resolver = "2"
members = [
    "mfsimvr/launcher",
    "mfsimvr/adb",
    "mfsimvr/audio",
    "mfsimvr/client_core",
    "mfsimvr/common",
    "mfsimvr/events",
    "mfsimvr/filesystem",
    "mfsimvr/graphics",
    "mfsimvr/gui_common",
    "mfsimvr/packets",
    "mfsimvr/dashboard",
    "mfsimvr/server_core",
    "mfsimvr/server_io",
    "mfsimvr/session",
    "mfsimvr/sockets",
    "mfsimvr/system_info",
]

[workspace.package]
version = "21.0.0-dev12"
edition = "2024"
rust-version = "1.92"
authors = ["alvr-org"]
license = "MIT"

[workspace.dependencies]
mfsimvr_adb = { path = "mfsimvr/adb" }
mfsimvr_audio = { path = "mfsimvr/audio" }
mfsimvr_client_core = { path = "mfsimvr/client_core" }
mfsimvr_common = { path = "mfsimvr/common" }
mfsimvr_events = { path = "mfsimvr/events" }
mfsimvr_filesystem = { path = "mfsimvr/filesystem" }
mfsimvr_graphics = { path = "mfsimvr/graphics" }
mfsimvr_gui_common = { path = "mfsimvr/gui_common" }
mfsimvr_packets = { path = "mfsimvr/packets" }
mfsimvr_server_core = { path = "mfsimvr/server_core"}
mfsimvr_server_io = { path = "mfsimvr/server_io" }
mfsimvr_session = { path = "mfsimvr/session" }
mfsimvr_sockets = { path = "mfsimvr/sockets" }
mfsimvr_system_info = { path = "mfsimvr/system_info" }

[profile.release]
debug = "limited"
strip = false

[profile.distribution]
inherits = "release"
lto = true
