[package]
name = "mfsimvr_dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mfsimvr_adb.workspace = true
mfsimvr_common.workspace = true
mfsimvr_events.workspace = true
mfsimvr_filesystem.workspace = true
mfsimvr_packets.workspace = true
mfsimvr_session.workspace = true
mfsimvr_sockets.workspace = true
mfsimvr_gui_common.workspace = true
mfsimvr_audio.workspace = true

chrono = "0.4"
eframe = "0.34"
env_logger = "0.11"
ico = "0.5"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema = { git = "https://github.com/alvr-org/settings-schema-rs", rev = "676185f" }
statrs = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mfsimvr_server_io.workspace = true
sysinfo = "0.38"
tungstenite = "0.29"
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = "25"
libva = { package = "cros-libva", version = "0.0.7" } # Latest that works on Ubuntu 22.04
nvml-wrapper = "0.12"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
