[package]
name = "mfsimvr_events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mfsimvr_common.workspace = true
mfsimvr_packets.workspace = true
mfsimvr_session.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
