[package]
name = "mfsimvr_graphics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mfsimvr_common.workspace = true
mfsimvr_session.workspace = true

glow = "0.16" # Needs to be update with wgpu
glyph_brush_layout = "0.2"
khronos-egl = { version = "6", features = ["dynamic"] }
pollster = "0.4"
wgpu = "25"
