[package]
name = "mfsimvr_launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mfsimvr_adb.workspace = true
mfsimvr_common.workspace = true
mfsimvr_filesystem.workspace = true
mfsimvr_gui_common.workspace = true
mfsimvr_system_info.workspace = true

anyhow = "1"
eframe = "0.34"
flate2 = "1.0.18"
futures-util = "0.3.28"
ico = "0.5"
open = "5"
reqwest = { version = "0.13", default-features = false, features = [
    "default-tls",
    "stream",
    "json",
    "http2",
] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
zip = "8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
