[package]
name = "mfsimvr_server_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
trace-performance = ["profiling/profile-with-tracy"]

[dependencies]
mfsimvr_adb.workspace = true
mfsimvr_audio.workspace = true
mfsimvr_common.workspace = true
mfsimvr_events.workspace = true
mfsimvr_filesystem.workspace = true
mfsimvr_packets.workspace = true
mfsimvr_server_io.workspace = true
mfsimvr_session.workspace = true
mfsimvr_sockets.workspace = true

ash = "0.38"
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
fern = "0.7"
flume = "0.11"
mdns-sd = "0.19"
profiling = { version = "1", optional = true }
rfd = "0.17"
rosc = "0.11"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
serde = "1"
serde_json = "1"
sysinfo = "0.38"
