[package]
name = "mfsimvr_server_openvr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux

[dependencies]
mfsimvr_common.workspace = true
mfsimvr_filesystem.workspace = true
mfsimvr_packets.workspace = true
mfsimvr_server_core.workspace = true
mfsimvr_server_io.workspace = true
mfsimvr_session.workspace = true

serde_json = "1"
sysinfo = "0.38"

[build-dependencies]
mfsimvr_filesystem = { path = "../filesystem" }
bindgen = "0.72"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
