[package]
name = "mfsimvr_vrcompositor_wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mfsimvr_common.workspace = true
mfsimvr_filesystem.workspace = true

[build-dependencies]
xshell = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
exec = "0.3"
